--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@radix-icons/vue": "^1.0.0",
     "@vueuse/core": "^12.5.0",
+    "@vueuse/integrations": "^12.5.0",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.475.0",
@@ -22,6 +24,7 @@
     "radix-vue": "^1.9.13",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "universal-cookie": "^7.2.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
